Fix page too large width for devices (iPhone)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,3 +29,7 @@ a {
 a:hover {
   color: #00BAFF;
 }
+
+.ui.page.grid {
+  min-width: 295px !important;
+}
